
[B]Advanced MAME Launcher | version 0.10.0 | xx xxxxxx 2020[/B]

WIP      [CORE] In the Setup Plugin CM, Build Fanarts and 3D boxes: add an option to
         build all the Fanarts and 3D boxes at once. Also an option to
         rebuild all missing stuff.

FEATURE  [CORE] New Utility "Show machines with biggest ROMs"

FEATURE  [CORE] New Utility "Show machines with smallest ROMs"


[B]Advanced MAME Launcher | version 0.9.12 | 10 February 2020[/B]

FEATURE  Create a new infolabel $INFO[ListItem.Property(history)] which shows the contents
         of history.dat for a machine. Add an option to include the contents of History.DAT
         in the asset database.
         Once this is tested remove the code to include History.DAT in the plot.
         See https://forum.kodi.tv/showthread.php?tid=304186&pid=2916270#pid2916270

FEATURE  Option to hide MAME machine flags.
         Contributed by Rychem28.

FEATURE  Option to hide SL item flags.
         Contributed by Rychem28.

FEATURE  Option to display only SL items with ROMs/CHDs available.
         Contributed by Rychem28.

FIX      Fixed parsing of History.dat 2.17.
         See https://forum.kodi.tv/showthread.php?tid=304186&pid=2913592#pid2913592


[B]Advanced MAME Launcher | version 0.9.11 | 26 November 2019[/B]

FEATURE  [CORE] For Software Lists, instead of showing the number of ROMs show the number
         of Items in Flat display mode or Parents in Parent/Clone display mode.

FEATURE  [CORE] Support for MASH's Alltime.ini.

FEATURE  [CORE] Improvements in the JSON index of DAT files. Use dictionaries and not list
         to reduce JSON file size and speed up data access.

FEATURE  [CORE] Improved main statistics.

FEATURE  [CORE] Improve some Software List long names until they are fixed in MAME repository.

FIX      Fixed conversion to int of addon version str in fs_AML_version_str_to_int()

FIX      New history.dat makes AML to crash because one entry could be for more than one