@@ -75,6 +75,7 @@
     <setting label="Action on Kodi playing media" type="enum" id="media_state_action" default="0" values="Stop|Pause|Keep playing" />
     <setting label="After/before launch delay (ms)" type="slider" id="delay_tempo" default="100" range="0,100,15000" option="int" />
     <setting label="Suspend/resume Kodi audio engine" type="bool" id="suspend_audio_engine" default="false" />
+    <setting label="Suspend/resume Kodi screensaver" type="bool" id="suspend_screensaver" default="true" />
     <setting label="Toggle Kodi into windowed mode" type="bool" id="toggle_window" default="false" />
     <setting label="Log level" type="enum" id="log_level" default="2" values="ERROR|WARNING|INFO|VERBOSE|DEBUG" />
 
